--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^8.*",
         "cocur/slugify": "^3.0 || ^4.0",
         "sonata-project/doctrine-extensions": "^1.5",
         "sonata-project/form-extensions": "^0.1.1",
