--- a/composer.json
+++ b/composer.json
@@ -19,23 +19,23 @@
     ],
     "require": {
         "php": "8.1",
-        "cocur/slugify": "^3.0 || ^4.0",
+        "cocur/slugify": "^3.0 || v4.3.0",
         "sonata-project/doctrine-extensions": "^1.5",
         "sonata-project/form-extensions": "^0.1.1",
         "sonata-project/twig-extensions": "^0.1.1",
-        "symfony/config": "^4.3",
-        "symfony/dependency-injection": "^4.3",
-        "symfony/event-dispatcher": "^4.3",
-        "symfony/form": "^4.3",
-        "symfony/framework-bundle": "^4.3",
-        "symfony/http-foundation": "^4.3",
-        "symfony/http-kernel": "^4.3",
-        "symfony/options-resolver": "^4.3",
-        "symfony/property-access": "^4.3",
-        "symfony/security-csrf": "^4.3",
-        "symfony/translation": "^4.3",
-        "symfony/twig-bridge": "^4.3",
-        "symfony/validator": "^4.3",
+        "symfony/config": "v6.2.7",
+        "symfony/dependency-injection": "v6.1.12",
+        "symfony/event-dispatcher": "v6.2.7",
+        "symfony/form": "v6.2.7",
+        "symfony/framework-bundle": "v6.2.7",
+        "symfony/http-foundation": "v6.2.7",
+        "symfony/http-kernel": "v6.2.7",
+        "symfony/options-resolver": "v6.2.7",
+        "symfony/property-access": "v6.1.3",
+        "symfony/security-csrf": "v6.2.0",
+        "symfony/translation": "^v6.1.11",
+        "symfony/twig-bridge": "^v6.0.16",
+        "symfony/validator": "v6.2.7",
         "twig/extensions": "^1.5",
         "twig/twig": "^2.12.1"
     },
