--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "8.1",
-        "cocur/slugify": "^3.0 || v4.3.0",
+        "cocur/slugify": "v4.3.0",
         "sonata-project/doctrine-extensions": "^1.5",
         "sonata-project/form-extensions": "^0.1.1",
         "sonata-project/twig-extensions": "^0.1.1",
